# social-media-api

./: Dockerfile  Makefile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt  schema.py
.github/workflows/: docker-image.yml  docker-publish.yml  heroku.yml  pylint.yml  python-app.yml
src/: config.py  database.py  main.py  oauth2.py  schemas.py  utils.py
src/routers/: auth.py  posts.py  users.py  vote.py
tests/: test_main.py
